--- a/refrence.html
+++ b/refrence.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="navbar">
-        <div class="logo"><a href="../html/index.html">PORTFOLIO</a></div>
+        <div class="logo"><a href="index.html">PORTFOLIO</a></div>
         <a href="#" class="toogle-button">
             <span class="bar"></span>
             <span class="bar"></span>
@@ -19,12 +19,12 @@
         </a>
         <div class="navlist">
         <ul>
-            <li><a href="../html/index.html">HOME </a></li>
-            <li><a href="../html/family.html">FAMILY</a> </li>
-            <li><a href="../html/aboutme.html">ABOUT ME </a></li>
-            <li><a href="../html/achievements.html">ACHIEVEMENTS </a></li>
-            <li><a href="../html/myidol.html">MY IDOL</a></li>
-            <li><a href="../html/refrence.html" class="active">REFERENCES</a></li>
+            <li><a href="index.html">HOME </a></li>
+            <li><a href="family.html">FAMILY</a> </li>
+            <li><a href="aboutme.html">ABOUT ME </a></li>
+            <li><a href="achievements.html">ACHIEVEMENTS </a></li>
+            <li><a href="myidol.html">MY IDOL</a></li>
+            <li><a href="refrence.html" class="active">REFERENCES</a></li>
         </ul>
         </div>
     </div>
