--- a/aboutme.html
+++ b/aboutme.html
@@ -19,12 +19,12 @@
         </a>
         <div class="navlist">
         <ul>
-            <li><a href="../html/index.html">HOME </a></li>
-            <li><a href="../html/family.html">FAMILY</a> </li>
-            <li><a href="../html/aboutme.html" class="active">ABOUT ME </a></li>
-            <li><a href="../html/achievements.html">ACHIEVEMENTS </a></li>
-            <li><a href="../html/myidol.html">MY IDOL</a></li>
-            <li><a href="../html/refrence.html">REFERENCES</a></li>
+            <li><a href="index.html">HOME </a></li>
+            <li><a href="family.html">FAMILY</a> </li>
+            <li><a href="aboutme.html" class="active">ABOUT ME </a></li>
+            <li><a href="achievements.html">ACHIEVEMENTS </a></li>
+            <li><a href="myidol.html">MY IDOL</a></li>
+            <li><a href="refrence.html" class="active">REFERENCES</a></li>
         </ul>
         </div>
     </div>
