--- a/aboutme.html
+++ b/aboutme.html
@@ -24,7 +24,7 @@
             <li><a href="aboutme.html" class="active">ABOUT ME </a></li>
             <li><a href="achievements.html">ACHIEVEMENTS </a></li>
             <li><a href="myidol.html">MY IDOL</a></li>
-            <li><a href="refrence.html" class="active">REFERENCES</a></li>
+            <li><a href="refrence.html">REFERENCES</a></li>
         </ul>
         </div>
     </div>
